Fixing a spacing issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,8 @@ header {
   padding: 20px 0;
   margin: 0 0 40px 0;
 }
+
+header h1:before {
+  content: "./";
+  font-size: 24px;
+}
